Update UI to hide question list if not logged in

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -18,6 +18,10 @@
   @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
 }
 
+.big_btn {
+  @apply rounded-full border border-black bg-transparent mt-10 py-2 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-xl font-inter flex;
+}
+
 .search_input {
   @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
 }
