--- a/frontend/src/styles/Chatbox.module.css
+++ b/frontend/src/styles/Chatbox.module.css
@@ -1,15 +1,157 @@
 .userMessage {
-    text-align: right;
-    background-color: #e6f7ff;
-    margin-left: 30%;
-    padding: 10px;
-    border-radius: 10px;
-  }
-  
-  .otherMessage {
-    text-align: left;
-    background-color: #fff0f5;
-    margin-right: 30%;
-    padding: 10px;
-    border-radius: 10px;
-  }
+  background-color: #5A5EB9;
+  color: white;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  max-width: 75%;
+  float: right;
+  margin-left: 25%;
+  word-break: break-word;
+}
+
+.otherMessage {
+  background-color: white;
+  color: #666;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  max-width: 75%;
+  float: left;
+  margin-right: 25%;
+  word-break: break-word;
+}
+
+.italicText {
+  font-style: italic;
+}
+
+.chat-box-toggle {
+  float:right;
+  margin-right:15px;
+  cursor:pointer;
+}
+
+.cm-msg-text {
+  background:white;
+  padding:10px 15px 10px 15px;  
+  color:#666;
+  max-width:75%;
+  float:left;
+  margin-left:10px; 
+  position:relative;
+  margin-bottom:20px;
+  border-radius:30px;
+}
+
+.chat-msg {
+  clear:both;    
+}
+
+.chat-msg.self > .cm-msg-text {  
+  float:right;
+  margin-right:10px;
+  background: #5A5EB9;
+  color:white;
+}
+.cm-msg-button>ul>li {
+  list-style:none;
+  float:left;
+  width:50%;
+}
+.cm-msg-button {
+    clear: both;
+    margin-bottom: 70px;
+}
+
+.chat-box {
+  background: #efefef;
+  position:fixed;
+  right:30px;
+  z-index: 9999;
+  bottom:50px;  
+  width:300px;
+  max-width: 85vw;
+  max-height:80%;
+  overflow-y: auto;
+  border-radius:5px;  
+  box-shadow: 0px 5px 35px 9px #ccc;
+}
+
+.chat-box-header {
+  background: #5A5EB9;
+  height:70px;
+  border-top-left-radius:5px;
+  border-top-right-radius:5px; 
+  color:white;
+  text-align:center;
+  font-size:20px;
+  padding-top:17px;
+}
+
+.chat-box-body {
+  position: relative;  
+  height:370px;  
+  border:1px solid #ccc;  
+  overflow: hidden;
+}
+
+.chat-logs {
+  padding:15px; 
+  height:370px;
+  overflow-y:scroll;
+}
+
+.chat-logs::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
+
+.chat-logs::-webkit-scrollbar {
+  width: 5px;  
+  background-color: #F5F5F5;
+}
+
+.chat-logs::-webkit-scrollbar-thumb {
+  background-color: #5A5EB9;
+}
+
+.chat-input {
+  background: #f4f7f9;
+  width:100%; 
+  position:relative;
+  height:47px;  
+  border:none;
+  resize:none;
+  outline:none;
+  border:1px solid #ccc;
+  color:#888;
+  border-top:none;
+  border-bottom-right-radius:5px;
+  border-bottom-left-radius:5px;
+  overflow:hidden;  
+}
+
+.chat-submit {  
+  position:absolute;
+  bottom:3px;
+  right:10px;
+  background: transparent;
+  box-shadow:none;
+  border:none;
+  border-radius:50%;
+  color:#5A5EB9;
+  width:35px;
+  height:35px;  
+  padding-top:10px;
+  padding-right:40px;
+  padding-bottom:35px;
+  padding-left:15px;
+}
+
+@media only screen and (max-width: 500px) {
+   .chat-logs {
+        height:40vh;
+    }
+}
+
